--- a/app/components/async-list/template.hbs
+++ b/app/components/async-list/template.hbs
@@ -1,11 +1,11 @@
-{{#if data.isRunning}}
+{{#if this.data.isRunning}}
   <div class="empty">
-    {{loading-icon}}
+    <LoadingIcon />
   </div>
-{{else if data.last.isError}}
+{{else if this.data.last.isError}}
   <div class="empty">
     <div>
-      {{fa-icon 'bolt'}}
+      <FaIcon @icon="bolt" />
       <h3>Oops... Something went wrong</h3>
       <p>
         Have you tried turning it off and on again?
@@ -14,10 +14,10 @@
       </p>
     </div>
   </div>
-{{else if (not data.last.value.length)}}
+{{else if (not this.data.last.value.length)}}
   <div class="empty">
-    {{yield 'empty' data.last.value}}
+    {{yield 'empty' this.data.last.value}}
   </div>
 {{else}}
-  {{yield 'body' data.last.value}}
+  {{yield 'body' this.data.last.value}}
 {{/if}}
