--- a/app/components/date-navigation/template.hbs
+++ b/app/components/date-navigation/template.hbs
@@ -10,4 +10,4 @@
   </button>
 </div>
 
-{{sy-datepicker-btn value=current on-change=(action on-change)}}
+{{sy-datepicker-btn value=this.current on-change=(action this.on-change)}}
