--- a/app/components/sort-header/template.hbs
+++ b/app/components/sort-header/template.hbs
@@ -1,6 +1,6 @@
 {{yield}}
-{{#if active}}
-  <i class="fa fa-sort-{{direction}}"></i>
+{{#if this.active}}
+  <i class="fa fa-sort-{{this.direction}}"></i>
 {{else}}
   <i class="fa fa-sort"></i>
 {{/if}}
