--- a/app/components/sy-modal/header/template.hbs
+++ b/app/components/sy-modal/header/template.hbs
@@ -1,4 +1,4 @@
 {{yield}}
-<button type="button" class="close" aria-label="Close" {{action close}}>
+<button type="button" class="close" aria-label="Close" {{action this.close}}>
   <span aria-hidden="true">&times;</span>
 </button>
