--- a/app/components/timed-clock/template.hbs
+++ b/app/components/timed-clock/template.hbs
@@ -14,7 +14,7 @@
     y2="288"
     stroke-width="30"
     stroke-linecap="round"
-    transform="rotate({{hour}} 256 256)"
+    transform="rotate({{this.hour}} 256 256)"
   />
   <line
     class="minute"
@@ -24,7 +24,7 @@
     y2="288"
     stroke-width="20"
     stroke-linecap="round"
-    transform="rotate({{minute}} 256 256)"
+    transform="rotate({{this.minute}} 256 256)"
   />
   <line
     class="second"
@@ -34,6 +34,6 @@
     y2="288"
     stroke-width="20"
     stroke-linecap="round"
-    transform="rotate({{second}} 256 256)"
+    transform="rotate({{this.second}} 256 256)"
   />
 </svg>
