--- a/app/components/weekly-overview-benchmark/template.hbs
+++ b/app/components/weekly-overview-benchmark/template.hbs
@@ -1,2 +1,2 @@
-{{#if showLabel}}<span style={{style}}>{{hours}}h</span>{{/if}}
-<hr style={{style}}>
+{{#if this.showLabel}}<span style={{this.style}}>{{this.hours}}h</span>{{/if}}
+<hr style={{this.style}}>
