--- a/app/index/attendances/template.hbs
+++ b/app/index/attendances/template.hbs
@@ -2,13 +2,13 @@
   <button type="button" class="btn btn-success" data-test-add-attendance {{action 'addAttendance'}}>Add attendance</button>
 </div>
 <div class="attendances">
-  {{#if attendances}}
+  {{#if this.attendances}}
     {{#if (or (media 'isXl') (media 'isLg') (media 'isMd'))}}
-      {{#each attendances as |attendance|}}
+      {{#each this.attendances as |attendance|}}
         {{attendance-slider
           data-test-attendance-slider
           data-test-attendance-slider-id=attendance.id
-          attendance = (changeset attendance AttendanceValidator)
+          attendance = (changeset attendance this.AttendanceValidator)
           on-save    = (route-action 'saveAttendance')
           on-delete  = (route-action 'deleteAttendance')
         }}
@@ -16,8 +16,8 @@
     {{else}}
       <table class="table table--striped table--attendances">
         <tbody>
-          {{#each attendances as |attendance|}}
-            {{#with (changeset attendance AttendanceValidator) as |model|}}
+          {{#each this.attendances as |attendance|}}
+            {{#with (changeset attendance this.AttendanceValidator) as |model|}}
               <tr
                 data-test-attendance-slider
                 data-test-attendance-slider-id={{attendance.id}}>
