--- a/app/components/balance-donut/template.hbs
+++ b/app/components/balance-donut/template.hbs
@@ -1,4 +1,4 @@
-<div class="donut-title">{{title}}</div>
+<div class="donut-title">{{this.title}}</div>
 
 <div class="donut">
   <svg width="100%" height="100%" viewBox="0 0 40 40">
@@ -6,7 +6,7 @@
       class="donut-ring"
       cx="20"
       cy="20"
-      r={{radius}}
+      r={{this.radius}}
       fill="transparent"
       stroke-width="2"
     ></circle>
@@ -15,25 +15,25 @@
       class="donut-segment"
       cx="20"
       cy="20"
-      r={{radius}}
+      r={{this.radius}}
       fill="transparent"
       stroke-width="2"
-      stroke-dasharray="{{mult (min value 1) 100}} {{mult (sub 1 (min value 1)) 100}}"
+      stroke-dasharray="{{mult (min this.value 1) 100}} {{mult (sub 1 (min this.value 1)) 100}}"
       stroke-dashoffset="25"
     ></circle>
   </svg>
 
   <div class="donut-content">
-    {{#if balance.usedDuration}}
-      {{format-duration balance.usedDuration false}}
+    {{#if this.balance.usedDuration}}
+      {{format-duration this.balance.usedDuration false}}
     {{else}}
-      {{#if balance.credit}}
-        <div>{{balance.usedDays}} of {{balance.credit}}</div>
-        {{#if (gte balance.credit 1)}}
-          <div>{{round (mult value 100)}}%</div>
+      {{#if this.balance.credit}}
+        <div>{{this.balance.usedDays}} of {{this.balance.credit}}</div>
+        {{#if (gte this.balance.credit 1)}}
+          <div>{{round (mult this.value 100)}}%</div>
         {{/if}}
       {{else}}
-        {{balance.usedDays}}
+        {{this.balance.usedDays}}
       {{/if}}
     {{/if}}
   </div>
