--- a/app/components/no-mobile-message/template.hbs
+++ b/app/components/no-mobile-message/template.hbs
@@ -1,4 +1,4 @@
-<div>
+<div class="empty">
   {{fa-icon 'mobile'}}
   <h3>Sorry, this page doesn't work on mobile!</h3>
   <p>
@@ -7,6 +7,6 @@
   </p>
   <p>
     Try opening this page on a larger device, or go back to the
-    {{#link-to 'index'}}home page{{/link-to}}!
+    <LinkTo @route="index">home page</LinkTo>!
   </p>
 </div>
