--- a/app/components/pagination-limit/template.hbs
+++ b/app/components/pagination-limit/template.hbs
@@ -1,10 +1,10 @@
 Per page:
-{{#each limits as |l i|}}
+{{#each this.limits as |l i|}}
   <span>
-    {{#if (eq page_size l)}}
+    {{#if (eq this.page_size l)}}
       {{l}}
     {{else}}
-      <a href="#" {{action (queue (action (mut page) 1) (action (mut page_size) l))}}>{{l}}</a>
+      <a href="#" {{action (queue (action (mut this.page) 1) (action (mut this.page_size) l))}}>{{l}}</a>
     {{/if}}
   </span>
 {{/each}}
