--- a/app/components/record-button/template.hbs
+++ b/app/components/record-button/template.hbs
@@ -1,8 +1,8 @@
 <div class="record-button-container record-button-container--start-stop">
-  {{#if active}}
+  {{#if this.active}}
     <button data-test-record-stop type="submit" class="record-button record-button--stop" {{action 'stop'}}></button>
     <div class="record-button-timer">
-      {{duration-since activity.from}}
+      {{duration-since this.activity.from}}
     </div>
   {{else}}
     <button data-test-record-start type="submit" class="record-button record-button--start" {{action 'start'}}></button>
