--- a/app/components/sy-modal/template.hbs
+++ b/app/components/sy-modal/template.hbs
@@ -1,12 +1,12 @@
-{{#ember-wormhole to='sy-modals'}}
-  {{#sy-modal/overlay visible=visible on-close=(action 'close')}}
-    <div class="modal-dialog {{if size (concat 'modal-dialog--' size)}}">
+<EmberWormhole @to="sy-modals">
+  <SyModal::Overlay @visible={{@visible}} @on-close={{this.close}}>
+    <div class="modal-dialog {{if this.size (concat 'modal-dialog--' this.size)}}">
       {{yield (hash
-        header = (component 'sy-modal/header' close=(action 'close'))
-        body   = (component 'sy-modal/body'   close=(action 'close'))
-        footer = (component 'sy-modal/footer' close=(action 'close'))
-        close  = (action 'close')
+        header = (component 'sy-modal/header' close=this.close)
+        body   = (component 'sy-modal/body'   close=this.close)
+        footer = (component 'sy-modal/footer' close=this.close)
+        close  = (this.close)
       )}}
     </div>
-  {{/sy-modal/overlay}}
-{{/ember-wormhole}}
+  </SyModal::Overlay>
+</EmberWormhole>
