--- a/app/components/weekly-overview/template.hbs
+++ b/app/components/weekly-overview/template.hbs
@@ -11,7 +11,7 @@
   {{weekly-overview-benchmark showLabel=false hours=2}}
   {{weekly-overview-benchmark showLabel=true  hours=0}}
 
-  {{weekly-overview-benchmark showLabel=true hours=hours expected=true}}
+  {{weekly-overview-benchmark showLabel=true hours=this.hours expected=true}}
 
   {{yield}}
 </div>
