--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -1,18 +1,18 @@
-{{#sy-modal visible=visible as |modal|}}
-  {{#modal.body}}
+{{#sy-modal visible=this.visible as |modal|}}
+  <modal.body>
     <div class="text-center">
       <h1>Welcome to Timed!</h1>
       <img style="max-width:50%" src="/assets/logo.svg">
       <h4>Would you like to take a tour?</h4>
     </div>
-  {{/modal.body}}
+  </modal.body>
 
-  {{#modal.footer}}
+  <modal.footer>
     <button
       type="button"
       class="btn btn-never"
       data-test-tour-never
-      {{action on-never}}>
+      {{action this.on-never}}>
       Never
     </button>
 
@@ -20,7 +20,7 @@
       type="button"
       class="btn btn-default"
       data-test-tour-later
-      {{action on-later}}>
+      {{action this.on-later}}>
       Later
     </button>
 
@@ -28,8 +28,8 @@
       type="submit"
       class="btn btn-primary"
       data-test-tour-start
-      {{action on-start}}>
+      {{action this.on-start}}>
       Sure
     </button>
-  {{/modal.footer}}
+  </modal.footer>
 {{/sy-modal}}
