--- a/app/index/reports/template.hbs
+++ b/app/index/reports/template.hbs
@@ -1,10 +1,10 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
-  <button type="button" class="btn btn-success" title="Move all entries to another date" data-test-report-reschedule {{action (mut showReschedule) true}}>Reschedule</button>
+  <button type="button" class="btn btn-success" title="Move all entries to another date" data-test-report-reschedule {{action (mut this.showReschedule) true}}>Reschedule</button>
 </div>
 
 <div class="form-list form-list--reports">
   <div class="form-list-body">
-    {{#each reports as |report|}}
+    {{#each this.reports as |report|}}
       {{report-row
         report
         data-test-report-row
@@ -16,26 +16,19 @@
   </div>
 </div>
 
-{{#sy-modal visible=showReschedule size="small" as |modal|}}
-  {{#modal.header}}
+{{#sy-modal visible=this.showReschedule size="small" as |modal|}}
+  <modal.header>
     Reschedule timesheet
-  {{/modal.header}}
-  {{#modal.body}}
-    {{#power-calendar
-      class = 'calendar'
-      center = center
-      selected = rescheduleDate
-      onCenterChange = (action (mut center) value='moment')
-      onSelect       = (action (mut rescheduleDate) value='moment')
-      as |calendar|
-      }}
+  </modal.header>
+  <modal.body>
+    <PowerCalendar @class="calendar" @center={{this.center}} @selected={{this.rescheduleDate}} @onCenterChange={{action (mut this.center) value='moment'}} @onSelect={{action (mut this.rescheduleDate) value='moment'}} as |calendar|>
       <div class={{if calendar.loading 'loading-mask'}}>
         {{calendar.nav}}
-        {{calendar.days disabledDates=disabledDates startOfWeek=1}}
+        <calendar.days @disabledDates={{this.disabledDates}} @startOfWeek={{1}} />
       </div>
-    {{/power-calendar}}
-  {{/modal.body}}
-  {{#modal.footer}}
-    <button type="submit" class="btn btn-primary" data-test-report-save {{action 'reschedule' rescheduleDate}}>Save</button>
-  {{/modal.footer}}
+    </PowerCalendar>
+  </modal.body>
+  <modal.footer>
+    <button type="submit" class="btn btn-primary" data-test-report-save {{action 'reschedule' this.rescheduleDate}}>Save</button>
+  </modal.footer>
 {{/sy-modal}}
