--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -1,7 +1,7 @@
 <PagePermission>
-  {{#if loading}}
+  {{#if this.loading}}
     <div class="empty">
-      {{loading-icon}}
+      <LoadingIcon />
     </div>
   {{else}}
     <div class="header">
@@ -35,17 +35,17 @@
         <div>{{project.name}}</div>
       </PowerSelect>
     </div>
-    {{#if selectedProject}}
+    {{#if this.selectedProject}}
       <h3>
         <span class="header-left">
-          Tasks of {{selectedProject.name}}
+          Tasks of {{this.selectedProject.name}}
         </span>
         <span class="header-right">
-          <button class="btn btn-primary" {{action (perform createTask)}} data-test-add-task>Add Task</button>
+          <button class="btn btn-primary" {{action (perform this.createTask)}} data-test-add-task>Add Task</button>
         </span>
       </h3>
       <div class="task-table-container">
-        {{#ember-scrollable class='projects-scrollable-container'}}
+        <EmberScrollable @class="projects-scrollable-container">
           <table class="table table--striped table--projects" data-test-tasks-table>
             <thead>
             <tr>
@@ -56,42 +56,29 @@
             </tr>
             </thead>
             <tbody>
-            {{#each tasks as |task|}}
-              <tr class="pointer {{if (eq selectedTask task) "selected"}}" {{action (mut selectedTask) task}} data-test-task-table-row>
+            {{#each this.tasks as |task|}}
+              <tr class="pointer {{if (eq this.selectedTask task) "selected"}}" {{action (mut this.selectedTask) task}} data-test-task-table-row>
                 <td data-test-table-name>{{task.name}}</td>
                 <td data-test-table-reference>{{if task.reference task.reference "-"}}</td>
                 <td data-test-table-estimated-time>{{if task.estimatedTime (humanize-duration task.estimatedTime) "-"}}</td>
-                <td>{{sy-checkmark data-test-table-archived checked=task.archived}}</td>
+                <td><SyCheckmark data-test-table-archived @checked={{task.archived}}/></td>
               </tr>
             {{/each}}
             </tbody>
           </table>
-        {{/ember-scrollable}}
+        </EmberScrollable>
       </div>
-      {{#if selectedTask}}
+      {{#if this.selectedTask}}
         <div class="task-form-container" data-test-task-form>
-          <h2>{{if selectedTask.isNew "Add task" selectedTask.name}}</h2>
-          {{#validated-form
-            model     = (changeset selectedTask TaskValidations)
-            on-submit = (perform saveTask)
-          as |f|}}
+          <h2>{{if this.selectedTask.isNew "Add task" this.selectedTask.name}}</h2>
+          <ValidatedForm @model={{changeset this.selectedTask this.TaskValidations}} @on-submit={{perform this.saveTask}} as |f|>
             <div class="task-form-container-row">
               <div class="task-form-container-column">
-                {{f.input
-                  data-test-name
-                  label="Name"
-                  name="name"
-                  required=true
-                }}
-                {{f.input
-                  data-test-reference
-                  label="Reference"
-                  name="reference"
-                  required=false
-                }}
+                <f.input  @label="Name" @name="name" @required={{true}} />
+                <f.input  @label="Reference" @name="reference" @required={{false}} />
               </div>
               <div class="task-form-container-column">
-                {{#f.input name='estimatedTime' as |fi|}}
+                <f.input @name="estimatedTime" as |fi|>
                   <label>
                     Estimated time
                   </label>
@@ -100,25 +87,25 @@
                     value=fi.value
                     on-change=fi.update
                   }}
-                {{/f.input}}
+                </f.input>
 
-                {{#f.input data-test-archived name='archived' as |fi|}}
+                <f.input  @name="archived" as |fi|>
                   <label>
                     Archived
                   </label>
                   {{sy-checkbox
-                    checked=selectedTask.archived
+                    checked=this.selectedTask.archived
                     value=fi.value
                     on-change=fi.update
                   }}
-                {{/f.input}}
+                </f.input>
               </div>
             </div>
             <div class="btn-toolbar btn-toolbar--right">
-              <button class="btn btn-primary" {{action (mut selectedTask) null}} data-test-cancel>Cancel</button>
-              {{f.submit data-test-save disabled=f.model.isInvalid}}
+              <button class="btn btn-primary" {{action (mut this.selectedTask) null}} data-test-cancel>Cancel</button>
+              <f.submit  @disabled={{f.model.isInvalid}} />
             </div>
-          {{/validated-form}}
+          </ValidatedForm>
         </div>
       {{/if}}
     {{else}}
